--- a/laravel-model-controller/resources/scss/app.scss
+++ b/laravel-model-controller/resources/scss/app.scss
@@ -1,1 +1,16 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a {
+    color: whitesmoke;
+}
+
+.active {
+    color: lightblue;
+}
